custom-headers/service-envoy.yaml
node:
  id: "id_identity"
  cluster: "cluster_identity"
static_resources:
  listeners:
    - name: listener_0
      transparent: true
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 4999
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                idle_timeout: 1s
                codec_type: auto
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/tmp/envoy-access-4999.log"
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  request_headers_to_add:
                    - header:
                        key: "x-request-upstream"
                        value: "%UPSTREAM_REMOTE_ADDRESS%"
                      append: true
                    - header:
                        key: "x-request-downstream-combo"
                        value: "%START_TIME(%Y/%m/%dT%H:%M:%S%z %s)%"
                      append: true
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster1
                      request_headers_to_add:
                        - header:
                            key: "x-request-upstream"
                            value: "%UPSTREAM_REMOTE_ADDRESS%"
                          append: true
                        - header:
                            key: "x-request-downstream-combo"
                            value: "%DOWNSTREAM_LOCAL_ADDRESS%"
                          append: true
                http_filters:
                  - name: envoy.router
                    typed_config: {}
      listener_filters:
        - name: envoy.listener.original_dst
          typed_config: {}

  clusters:
    - name: cluster1
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: localhost
            port_value: 5000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000
